force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>Assessment -{0000}</displayFormat>
        <label>Assessment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>