force-app/main/default/objects/Assessment__c/fields/AchievableJobGoals__c.field-meta.xml
<CustomField>
    <fullName>AchievableJobGoals__c</fullName>
    <label>Achievable Job Goals</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>