force-app/main/default/objects/Assessment__c/fields/Advancement_Initial_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Initial_Assessment_Date__c</fullName>
    <formula>if( isblank(Case_Record__r.Advancement_Initial_Assessment_Date__c), &quot;Never Previously Referred&quot;, text(Case_Record__r.Advancement_Initial_Assessment_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If student has ever been referred to Advancement and assessed by Advancement team</inlineHelpText>
    <label>Advancement Initial Assessment Date</label>
    <type>Text</type>
</CustomField>