force-app/main/default/objects/Assessment__c/fields/Advancement_Referral__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Referral__c</fullName>
    <label>Advancement Referral</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>