force-app/main/default/objects/Assessment__c/fields/Advancement_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Status_Reason__c</fullName>
    <formula>if (contains(text(Case_Record__r.Advancement_Status__c), &quot;Inactive&quot;),  text(Case_Record__r.Advancement_Status__c) &amp;&quot; - &quot;&amp; text(Case_Record__r.Advancement_Inactive_Reason__c), 

text(Case_Record__r.Advancement_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advancement Status &amp; Reason</label>
    <type>Text</type>
</CustomField>