force-app/main/default/objects/Assessment__c/fields/Anger_Control__c.field-meta.xml
<CustomField>
    <fullName>Anger_Control__c</fullName>
    <inlineHelpText>This item captures the individual’s ability to identify and manage their anger when frustrated.</inlineHelpText>
    <label>Anger Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>