force-app/main/default/objects/Assessment__c/fields/Anxiety__c.field-meta.xml
<CustomField>
    <fullName>Anxiety__c</fullName>
    <inlineHelpText>This item describes the individual’s level of fearfulness, worrying, or other characteristics of anxiety.</inlineHelpText>
    <label>Anxiety</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>