force-app/main/default/objects/Assessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>