force-app/main/default/objects/Assessment__c/fields/Assessment_Result__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Result__c</fullName>
    <formula>if (Attendance__c &amp;&amp; Disciplinary_Record__c &amp;&amp; Performance__c 
&amp;&amp; Housing__c &amp;&amp; Childcare__c &amp;&amp; Health__c 
&amp;&amp; Self_Selection__c &amp;&amp; Follow_through__c &amp;&amp; Critical_Thinking__c &amp;&amp; Self_Referral_Form__c &amp;&amp;  HighSchoolDiplomaGED__c &amp;&amp;  Assessment_Date__c &lt; date(2020,08,10), 

&quot;Referred to Advancement Services&quot;, 

if (Attendance__c &amp;&amp; Disciplinary_Record__c &amp;&amp; Performance__c 
&amp;&amp; Housing__c &amp;&amp; Childcare__c &amp;&amp; Health__c 
&amp;&amp; Self_Selection__c &amp;&amp; Follow_through__c &amp;&amp; Critical_Thinking__c &amp;&amp; Self_Referral_Form__c &amp;&amp;  Assessment_Date__c &gt;= date(2020,08,10),

&quot;Referred to Advancement Services&quot;,

&quot;Not Referred to Advancement Services&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will update to referred if all items are checked off</inlineHelpText>
    <label>Assessment Result</label>
    <type>Text</type>
</CustomField>