force-app/main/default/objects/Assessment__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student has excellent attendance at work.
-Understands company policy.
-Has excellent attendance as per company policy.</inlineHelpText>
    <label>Attendance</label>
    <type>Checkbox</type>
</CustomField>