force-app/main/default/objects/Assessment__c/fields/AttendedCollege__c.field-meta.xml
<CustomField>
    <fullName>AttendedCollege__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended College</label>
    <type>Checkbox</type>
</CustomField>