force-app/main/default/objects/Assessment__c/fields/AttendedTradeSchool__c.field-meta.xml
<CustomField>
    <fullName>AttendedTradeSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Trade School</label>
    <type>Checkbox</type>
</CustomField>