force-app/main/default/objects/Assessment__c/fields/Auto_Loan__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan__c</fullName>
    <label>Auto Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>