force-app/main/default/objects/Assessment__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>How soon can you begin looking for work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Next Week</fullName>
            </value>
            <value>
                <fullName>Two Weeks from Now</fullName>
            </value>
            <value>
                <fullName>A Month from Now</fullName>
            </value>
            <value>
                <fullName>Longer Than a Month from Now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>