force-app/main/default/objects/Assessment__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the baseline assessment for a case record and record type</description>
    <label>Baseline</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Baseline Assessment</relationshipLabel>
    <relationshipName>Baseline_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>