force-app/main/default/objects/Assessment__c/fields/BestQualitiesFriendsFamily__c.field-meta.xml
<CustomField>
    <fullName>BestQualitiesFriendsFamily__c</fullName>
    <inlineHelpText>What would your friends or family say are your best qualities?</inlineHelpText>
    <label>Best Qualities (Friends/Family)</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>