force-app/main/default/objects/Assessment__c/fields/BestSchoolSubjects__c.field-meta.xml
<CustomField>
    <fullName>BestSchoolSubjects__c</fullName>
    <inlineHelpText>What subjects did you find the easiest in school? What subjects were you the best at?</inlineHelpText>
    <label>Best School Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Reading/English</fullName>
            </value>
            <value>
                <fullName>SocialStudies</fullName>
                <label>Social Studies</label>
            </value>
            <value>
                <fullName>Gym/Sports</fullName>
            </value>
            <value>
                <fullName>Art/Music</fullName>
            </value>
            <value>
                <fullName>Trade/Shop</fullName>
            </value>
            <value>
                <fullName>ComputerScience</fullName>
                <label>Computer Science</label>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Debate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>