force-app/main/default/objects/Assessment__c/fields/CandidateDescription__c.field-meta.xml
<CustomField>
    <fullName>CandidateDescription__c</fullName>
    <inlineHelpText>What makes you a great candidate for this particular work or training?</inlineHelpText>
    <label>Candidate Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>