force-app/main/default/objects/Assessment__c/fields/CareerJobGoals__c.field-meta.xml
<CustomField>
    <fullName>CareerJobGoals__c</fullName>
    <inlineHelpText>To you, what is the difference between a career and a job? Is a career important to you?
If you could have any long-term career today, what would you choose?</inlineHelpText>
    <label>Career vs. Job / Long-Term Goals</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>