force-app/main/default/objects/Assessment__c/fields/CASASWhereTaken__c.field-meta.xml
<CustomField>
    <fullName>CASASWhereTaken__c</fullName>
    <label>CASAS — Where Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>