force-app/main/default/objects/Assessment__c/fields/Case_Participant__c.field-meta.xml
<CustomField>
    <fullName>Case_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The case participant, if the assessment is for a particular case participant.</inlineHelpText>
    <label>Case Participant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Case Participant must be associated with the Case Record from the Assessment.</errorMessage>
        <filterItems>
            <field>Case_Participation__c.Case_Record__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Record__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Participation__c</referenceTo>
    <relationshipLabel>Assessment</relationshipLabel>
    <relationshipName>Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>