force-app/main/default/objects/Assessment__c/fields/CH_Self_Report_Incident_Charge__c.field-meta.xml
<CustomField>
    <fullName>CH_Self_Report_Incident_Charge__c</fullName>
    <label>CH Self Report: Incident Charge</label>
    <length>150</length>
    <type>Text</type>
</CustomField>