force-app/main/default/objects/Assessment__c/fields/CH_Self_Report_Incident_Date_Approx__c.field-meta.xml
<CustomField>
    <fullName>CH_Self_Report_Incident_Date_Approx__c</fullName>
    <inlineHelpText>Criminal History Self Report: Incident Date (Approximation)</inlineHelpText>
    <label>CH Self Report: Incident Date (Approx)</label>
    <type>Date</type>
</CustomField>