force-app/main/default/objects/Assessment__c/fields/CH_Self_Report_Incident_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CH_Self_Report_Incident_Outcome__c</fullName>
    <label>CH Self Report: Incident Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supervision</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Incarcerated (Prison)</fullName>
            </value>
            <value>
                <fullName>Incarcerated (Jail)</fullName>
            </value>
            <value>
                <fullName>Found Guilty</fullName>
            </value>
            <value>
                <fullName>Conditional Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>