force-app/main/default/objects/Assessment__c/fields/CH_Self_Report_Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>CH_Self_Report_Incident_Type__c</fullName>
    <label>CH Self Report: Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
            <value>
                <fullName>Ordinance Violation</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>