force-app/main/default/objects/Assessment__c/fields/Checking_Account_Bank__c.field-meta.xml
<CustomField>
    <fullName>Checking_Account_Bank__c</fullName>
    <label>Checking Account Bank</label>
    <length>150</length>
    <type>Text</type>
</CustomField>