force-app/main/default/objects/Assessment__c/fields/Child_Support__c.field-meta.xml
<CustomField>
    <fullName>Child_Support__c</fullName>
    <label>Child Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>