force-app/main/default/objects/Assessment__c/fields/Child_Support_Amount_Self_Report__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Amount_Self_Report__c</fullName>
    <label>Child Support Amount (Self Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>