force-app/main/default/objects/Assessment__c/fields/Childcare__c.field-meta.xml
<CustomField>
    <fullName>Childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student’s childcare is solid.
-If there is any problem with childcare, student has a back-up plan.
-Childcare does not compromise ability to work.
-Childcare is within budget.</inlineHelpText>
    <label>Childcare</label>
    <type>Checkbox</type>
</CustomField>