force-app/main/default/objects/Assessment__c/fields/Childcare_Support__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Support__c</fullName>
    <label>Childcare/Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>