force-app/main/default/objects/Assessment__c/fields/Client_Household__c.field-meta.xml
<CustomField>
    <fullName>Client_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In the case that the case record entity is a client household.</description>
    <label>Client Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Assessment</relationshipLabel>
    <relationshipName>Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>