force-app/main/default/objects/Assessment__c/fields/Client_Session__c.field-meta.xml
<CustomField>
    <fullName>Client_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional lookup used for assessments captured or edited during service entry.</description>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Assessment</relationshipLabel>
    <relationshipName>Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>