force-app/main/default/objects/Assessment__c/fields/Collected_During__c.field-meta.xml
<CustomField>
    <fullName>Collected_During__c</fullName>
    <description>Created by AC in Oct 2016 to better organize Housing Assessments. Temporarily used until Housing Assessment entry and rollup is restructured. Values manually determined and uploaded.

Added to layout and field set as part of Incoming Participant Data cleanup in Nov 2018. Changed &quot;Program&quot; picklist value to &quot;Leadership Development&quot;.</description>
    <label>Collected During</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Entry</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
                <label>Leadership Development</label>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Great Wall</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>