force-app/main/default/objects/Assessment__c/fields/Communication_Hover_for_Prompt_1__c.field-meta.xml
<CustomField>
    <fullName>Communication_Hover_for_Prompt_1__c</fullName>
    <inlineHelpText>Tell me about a time when you were confused about a task. What steps did you take for clarification?</inlineHelpText>
    <label>Communication, Hover for Prompt 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>