force-app/main/default/objects/Assessment__c/fields/Communication_Hover_for_Prompt_2__c.field-meta.xml
<CustomField>
    <fullName>Communication_Hover_for_Prompt_2__c</fullName>
    <description>Changed May 2022, previous question: How would you describe yourself?
Changed Feb 2021, previous question: How would you ask your supervisor for more responsibility?</description>
    <inlineHelpText>How do you describe yourself professionally?</inlineHelpText>
    <label>Communication, Hover for Prompt 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>