force-app/main/default/objects/Assessment__c/fields/Communication_Hover_for_Prompt_3__c.field-meta.xml
<CustomField>
    <fullName>Communication_Hover_for_Prompt_3__c</fullName>
    <inlineHelpText>Where do you see yourself in 3-5 years?</inlineHelpText>
    <label>Communication, Hover for Prompt 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>