force-app/main/default/objects/Assessment__c/fields/Communication_Rating_3__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating_3__c</fullName>
    <inlineHelpText>Does the answer match Cara&apos;s definition of the competency?</inlineHelpText>
    <label>Communication, Rating 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>