force-app/main/default/objects/Assessment__c/fields/CompletedApprenticeship__c.field-meta.xml
<CustomField>
    <fullName>CompletedApprenticeship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Apprenticeship</label>
    <type>Checkbox</type>
</CustomField>