force-app/main/default/objects/Assessment__c/fields/ComputerComfortLevel__c.field-meta.xml
<CustomField>
    <fullName>ComputerComfortLevel__c</fullName>
    <inlineHelpText>On a scale of 1 - 5 how comfortable do you feel working on a computer? (1 = Not comfortable, 5 = Very comfortable)</inlineHelpText>
    <label>Computer Comfort Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>