force-app/main/default/objects/Assessment__c/fields/Conflict_Management_Hover_for_Prompt_1__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Management_Hover_for_Prompt_1__c</fullName>
    <description>Changed May 2022, previous question: Tell me about a time when you had a conflict with a coworker and how you handled it. What are the skills you use to manage frustration at work?
Changed Feb 2021, previous question: Tell me about a time when you had to work with someone you disagreed with. How did you handle it?</description>
    <inlineHelpText>Tell me about a time you had a conflict at work?</inlineHelpText>
    <label>Conflict Management, Hover for Prompt 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>