force-app/main/default/objects/Assessment__c/fields/Conflict_Management_Hover_for_Prompt_2__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Management_Hover_for_Prompt_2__c</fullName>
    <description>Previous Question: What would you do if your paycheck was incorrect (short hours)?</description>
    <inlineHelpText>How do you work with a difficult manager?</inlineHelpText>
    <label>Conflict Management, Hover for Prompt 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>