force-app/main/default/objects/Assessment__c/fields/Conflict_Management_Hover_for_Prompt_3__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Management_Hover_for_Prompt_3__c</fullName>
    <inlineHelpText>Tell me about a time you were treated unfairly on a job. How did you handle that situation?</inlineHelpText>
    <label>Conflict Management, Hover for Prompt 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>