force-app/main/default/objects/Assessment__c/fields/Coping_and_Savoring_Skills__c.field-meta.xml
<CustomField>
    <fullName>Coping_and_Savoring_Skills__c</fullName>
    <inlineHelpText>This rating should be based on the psychological strengths that the individual might have developed including both the ability to enjoy positive life experiences and manage negative life experiences.</inlineHelpText>
    <label>Coping and Savoring Skills</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>