force-app/main/default/objects/Assessment__c/fields/CredentialDateEarned__c.field-meta.xml
<CustomField>
    <fullName>CredentialDateEarned__c</fullName>
    <label>Credential Date Earned</label>
    <type>Date</type>
</CustomField>