force-app/main/default/objects/Assessment__c/fields/CredentialInstitution__c.field-meta.xml
<CustomField>
    <fullName>CredentialInstitution__c</fullName>
    <label>Credential Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>