force-app/main/default/objects/Assessment__c/fields/CredentialTitle__c.field-meta.xml
<CustomField>
    <fullName>CredentialTitle__c</fullName>
    <label>Credential Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>