force-app/main/default/objects/Assessment__c/fields/CredentialType__c.field-meta.xml
<CustomField>
    <fullName>CredentialType__c</fullName>
    <label>Credential Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>