force-app/main/default/objects/Assessment__c/fields/Credit_Card_Payments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payments__c</fullName>
    <label>Credit Card Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>