force-app/main/default/objects/Assessment__c/fields/Critical_Thinking__c.field-meta.xml
<CustomField>
    <fullName>Critical_Thinking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student has shown that he/she understands what is expected in order to advance and has the ability to articulate how that applies to his/her life.
-IDS can identify at least one example from personal or professional life.</inlineHelpText>
    <label>Critical Thinking</label>
    <type>Checkbox</type>
</CustomField>