force-app/main/default/objects/Assessment__c/fields/Delinquency__c.field-meta.xml
<CustomField>
    <fullName>Delinquency__c</fullName>
    <inlineHelpText>This rating includes both criminal behavior and status offenses that may result from individual failing to follow required behavioral standards (e.g., truancy).</inlineHelpText>
    <label>Delinquency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>