force-app/main/default/objects/Assessment__c/fields/Disciplinary_Record__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student has no disciplinary action on file at work. 
-No verbal/written warnings (including zero points in disciplinary points systems).</inlineHelpText>
    <label>Disciplinary Record</label>
    <type>Checkbox</type>
</CustomField>