force-app/main/default/objects/Assessment__c/fields/Driver_s_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License__c</fullName>
    <label>Driver&apos;s License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Fees Owed</fullName>
            </value>
            <value>
                <fullName>Never driven</fullName>
            </value>
            <value>
                <fullName>Access to automobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>