force-app/main/default/objects/Assessment__c/fields/Driver_s_License_Fees_Owed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License_Fees_Owed_Amount__c</fullName>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Driver&apos;s License Fees Owed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>