force-app/main/default/objects/Assessment__c/fields/EcmIsLocked__c.field-meta.xml
<CustomField>
    <fullName>EcmIsLocked__c</fullName>
    <description>ECM field used to determine if a record should be considered locked.</description>
    <formula>ISPICKVAL( Status__c , &apos;Finalised&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EcmIsLocked</label>
    <type>Checkbox</type>
</CustomField>