force-app/main/default/objects/Assessment__c/fields/Educational__c.field-meta.xml
<CustomField>
    <fullName>Educational__c</fullName>
    <inlineHelpText>This rating refers to the strengths of the school system or a preschool setting, and may or may not reflect any specific educational skills possessed by the individual.</inlineHelpText>
    <label>Educational</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>