force-app/main/default/objects/Assessment__c/fields/Effective_Date_Update__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Update__c</fullName>
    <label>Effective Date (Update)</label>
    <type>Date</type>
</CustomField>